[package]
name = "sqlite-web-api"
version = "0.1.0"
edition = "2021"
authors = ["SQLite Web API"]
description = "A simple JSON HTTP API for querying SQLite databases"
license = "MIT"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
warp = { version = "0.4.2", features = ["server"] }
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
config = "0.15.19"
base64 = "0.22.1"
log = "0.4"
env_logger = "0.11.8"
futures = "0.3"
anyhow = "1.0"
thiserror = "2.0.17"
r2d2 = "0.8.10"
r2d2_sqlite = "0.31.0"
uuid = { version = "1.8.0", features = ["v4"] }